tests/ui/cmse-nonsecure/cmse-nonsecure-call/gate_test.stderr
error[E0658]: the extern "C-cmse-nonsecure-call" ABI is experimental and subject to change
  --> $DIR/gate_test.rs:5:46
   |
LL |         core::mem::transmute::<usize, extern "C-cmse-nonsecure-call" fn(i32, i32, i32, i32) -> i32>(
   |                                              ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #81391 <https://github.com/rust-lang/rust/issues/81391> for more information
   = help: add `#![feature(abi_c_cmse_nonsecure_call)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
Future incompatibility report: Future breakage diagnostic:
warning: the calling convention "C-cmse-nonsecure-call" is not supported on this target
  --> $DIR/gate_test.rs:5:39
   |
LL |         core::mem::transmute::<usize, extern "C-cmse-nonsecure-call" fn(i32, i32, i32, i32) -> i32>(
   |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #130260 <https://github.com/rust-lang/rust/issues/130260>

